# solar-system

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidOut.cpp  AndroidOut.h  Arrow.h  Background.cpp  Background.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Circle.h  Game.cpp  Game.h  Matrix.h  Object.h  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Ship.cpp  Ship.h  Star.cpp  Star.h  Vertex.h  main.cpp
app/src/main/cpp/objects/: Background.cpp  Background.h  Circle.cpp  Circle.h  Object.h  Path.cpp  Path.h  Ship.cpp  Ship.h
app/src/main/cpp/shaders/: BackgroundShader.cpp  BackgroundShader.h  ObjectShader.cpp  ObjectShader.h  Shader.cpp  Shader.h
app/src/main/java/com/example/solarsystem/: MainActivity.kt
app/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
